# actix-beta-cors-example

./: Cargo.toml
src/: main.rs
